# chat-ai-hub

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
