[package]
name = "chat-ai-hub"
version = "0.1.0"
description = "A compact desktop hub for AI and web URLs."
authors = ["suomier"]
edition = "2021"

[lib]
name = "chat_ai_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.4", features = [] }

[dependencies]
tauri = { version = "=2.10.0", features = [] }
tauri-plugin-opener = "=2.4.0"
